--- a/docs/ADR-0001.md
+++ b/docs/ADR-0001.md
@@ -1,3 +1,11 @@
-# ADR-0001: Initial architecture
+# ADR-0001: Plugin-based architecture
 
-Decide on prompt generation via shell picker and Python formatter.
+This project separates the user interface from data loading and
+prompt generation.
+
+* Shell scripts call Python modules to load `dataset/templates.json`.
+* Optional plugins inside `plugins/` supply additional slot values.
+* The CLI copies results to the clipboard when `xclip` is available.
+
+Future work may include plugin discovery via entry points and schema
+validation for custom datasets.
