feat(sprint1): scaffold tickets and ci

--- a/tickets/50-003.md
+++ b/tickets/50-003.md
@@ -1,7 +1,6 @@
-# 50-003 - SHE - Cross-platform clipboard support (Win/Mac)
+# 50-003 - SHE - Clipboard robustness on Arch + Win/Mac
 - **Stream**: SHE
-- **Title**: Cross-platform clipboard support (Win/Mac)
+- **Title**: Clipboard robustness on Arch + Win/Mac
 - **Dependencies**: 30-001
 - **Priority**: P1
 - **Estimated hours**: 4
-
