--- a/tickets/60-003.md
+++ b/tickets/60-003.md
@@ -1,7 +1,6 @@
-# 60-003 - INF - Implement `make setup` and `Makefile`
+# 60-003 - INF - Implement `make setup` and full Makefile targets
 - **Stream**: INF
-- **Title**: Implement `make setup` and `Makefile`
+- **Title**: Implement `make setup` and full Makefile targets
 - **Dependencies**: 50-002
 - **Priority**: P1
 - **Estimated hours**: 2
-
