--- a/tickets/60-005.md
+++ b/tickets/60-005.md
@@ -1,7 +1,6 @@
-# 60-005 - QA - Complete integration tests (end-to-end flow)
+# 60-005 - QA - End-to-end integration tests (shell ↔ python flow)
 - **Stream**: QA
-- **Title**: Complete integration tests (end-to-end flow)
+- **Title**: End-to-end integration tests (shell ↔ python flow)
 - **Dependencies**: 50-005
 - **Priority**: P1
 - **Estimated hours**: 3
-
