--- a/tickets/60-007.md
+++ b/tickets/60-007.md
@@ -1,7 +1,6 @@
-# 60-007 - INF - Clean dataset directory (remove `nsfwprompts.txt` if unused)
+# 60-007 - INF - Clean dataset directory of unused files
 - **Stream**: INF
-- **Title**: Clean dataset directory (remove `nsfwprompts.txt` if unused)
+- **Title**: Clean dataset directory of unused files
 - **Dependencies**: 50-001
 - **Priority**: P2
 - **Estimated hours**: 1
-
