--- a/tickets/70-001.md
+++ b/tickets/70-001.md
@@ -1,7 +1,6 @@
-# 70-001 - SHE - Universal script-path resolution (`SCRIPT_DIR` fix)
-- **Stream**: SHE
+# 70-001 - INF - Universal script-path resolution (`SCRIPT_DIR` fix)
+- **Stream**: INF
 - **Title**: Universal script-path resolution (`SCRIPT_DIR` fix)
 - **Dependencies**: 60-001
 - **Priority**: P0
 - **Estimated hours**: 2
-
